--- a/package.json
+++ b/package.json
@@ -10,10 +10,28 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@react-spring/web": "^9.6.1",
+    "@react-three/drei": "^9.56.5",
+    "@react-three/fiber": "^8.10.1",
+    "@use-gesture/react": "^10.2.23",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "framer-motion": "^8.5.2",
     "next": "13.1.1",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-p5": "^1.3.33",
+    "react-responsive": "^9.0.2",
+    "react-swipeable": "^7.0.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-use-gesture": "^9.1.3",
+    "react-use-measure": "^2.1.1",
+    "styled-components": "^5.3.6",
+    "video-react": "^0.16.0"
+  },
+  "devDependencies": {
+    "babel-plugin-static-fs": "^3.0.0"
   }
 }
