--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-indiana-drag-scroll": "^2.2.0",
+    "react-indiana-drag-scroll": "^3.0.3-alpha",
     "react-lazy-load-image-component": "^1.5.6",
     "react-p5": "^1.3.33",
     "react-responsive": "^9.0.2",
